--- a/gb/18/11/28/n10879799.md
+++ b/gb/18/11/28/n10879799.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新疆向内地高薪招万名教师及警察 引关注</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/000_Hkg2553004-600x400.jpg" />
 <h6>图为乌鲁木齐火车站前的大量特警。(Goh Chai Hin/AFP)
 </h6>
 <hr>
-<p>【大纪元2018年11月29日讯】（大纪元记者骆亚、李新安采访报导）近年来，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86.md">新疆</a>各地不断面向全国<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%8B%9B%E8%81%98.md">招聘</a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%95%99%E5%B8%88.md">教师</a>、<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E8%AD%A6%E5%AF%9F.md">警察</a>等人手，且降低门槛，给予高薪福利。外界质疑，大量维吾尔人被投入“再教育”集中营后，或直接引发当地师资力量紧缺和对警力的加大投入。</p>
-<p>近日，一则“2019年<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86.md">新疆</a>喀什地区优秀<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%95%99%E5%B8%88.md">教师</a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%8B%9B%E8%81%98.md">招聘</a>11,917人公告”引发外界关注。公告称，为加强喀什地区国语教育，面向内地高校毕业生招聘。招聘岗位包括中小学和幼儿园教师。</p>
+<p>【大纪元2018年11月29日讯】（大纪元记者骆亚、李新安采访报导）近年来，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86.md#1">新疆</a>各地不断面向全国<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8B%9B%E8%81%98.md#1">招聘</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%95%99%E5%B8%88.md#1">教师</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%AD%A6%E5%AF%9F.md#1">警察</a>等人手，且降低门槛，给予高薪福利。外界质疑，大量维吾尔人被投入“再教育”集中营后，或直接引发当地师资力量紧缺和对警力的加大投入。</p>
+<p>近日，一则“2019年<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86.md#1">新疆</a>喀什地区优秀<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%95%99%E5%B8%88.md#1">教师</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8B%9B%E8%81%98.md#1">招聘</a>11,917人公告”引发外界关注。公告称，为加强喀什地区国语教育，面向内地高校毕业生招聘。招聘岗位包括中小学和幼儿园教师。</p>
 <p>招聘要求“政治合格”、“无宗教信仰”。月薪7,000元至10,000元（含五险一金）。配偶来喀什工作的，可提供夫妻周转房。最低服务年限为三年。</p>
 <p>近年来，新疆地区的政府机关和学校每年都在向内地招人，但是这么大面积地招聘教师仍属罕见。外界质疑，为何当地师资力量突然短缺这么多人？</p>
 <p>2016年以来，中共新疆当局大力推动“再教育营”。根据联合国人权机构分析，目前关押在新疆“再教育营”的人数在100万左右。</p>
@@ -20,8 +20,8 @@
 <p>美联社今年9月21日报导说，中共政府还建造了上千家所谓的“双语学校”。其中一些是住宿学校，而且是强制性的。一个哈萨克族家庭被迫把5岁的孩子送进这样的学校。</p>
 <h2>新疆各地增加警力 高薪聘请辅警</h2>
 <p>扩建“再教育营”和监控社会大众，必然需要投入大量的警力。除了教师岗位空缺急招外，一篇题为“工资9,500元，提供住房！新疆10月最新招聘40,887人……”的招聘广告，也在中共各地政府的微信公众号内传播。招聘单位大多是政府机关和国有企事业单位，职位以辅警居多，其中新疆生产建设兵团招聘事业单位工作人员2,437名。</p>
-<p>国家公务员考试网“其它考试”栏目10月30日发布的一则公告显示，新疆阿图什市公安局面向社会公开招聘1891名编制外<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E8%AD%A6%E5%AF%9F.md">警察</a>及公益性辅警，退伍军人学历不限。</p>
-<figure id="attachment_10879866" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2018/11/000_meitu_1.jpg"><img class="wp-image-10879866 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/11/000_meitu_1-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">国家公务员考试网10月30日发布公告，新疆阿图什市公安局面向社会公开招聘1891名编制外警察及公益性辅警，退伍军人学历不限。（网页截图）</figcaption></figure>
+<p>国家公务员考试网“其它考试”栏目10月30日发布的一则公告显示，新疆阿图什市公安局面向社会公开招聘1891名编制外<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%AD%A6%E5%AF%9F.md#1">警察</a>及公益性辅警，退伍军人学历不限。</p>
+<figure id="attachment_10879866" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/000_meitu_1.jpg"><img class="wp-image-10879866 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/11/000_meitu_1-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">国家公务员考试网10月30日发布公告，新疆阿图什市公安局面向社会公开招聘1891名编制外警察及公益性辅警，退伍军人学历不限。（网页截图）</figcaption></figure>
 <p>同一天，另一则公告也显示，经新疆哈密市伊州区面向河南公开招聘700名辅警，要求均为初中及以上学历。合同每三年一签，月平均工资最低6,100元。</p>
 <p>有网民表示：“一帮地痞癞子继城管国保之后又有工作了。”还有网民跟帖透露，在不到12万人口的巴音郭楞蒙古自治州轮胎县，现在向全国招聘40名正式警察、700名协警。必须是汉族。</p>
 <p>南疆乌恰县向全国招聘“政法人员”300名，高中学历即可，月收入不低于5,800元。而百度上写明乌恰县农牧民2013年的收入只有4,356元。</p>
@@ -31,49 +31,52 @@
 <h2>制止新疆迫害 吁国际制裁</h2>
 <p>新疆“再教育营”的存在持续引发国际社会的谴责，中共仍一意孤行。27日，中共驻美大使崔天凯在接受路透社采访时称，如果美国针对涉嫌侵犯人权的新疆高官展开制裁，中共会“看状况按比例回应”。</p>
 <p>崔天凯还说：“美国是用导弹和无人机杀死恐怖分子，我们则是试图重新教育他们之中的大多数人，试图将他们变成可以恢复普通生活的正常人。”</p>
-<p>针对中共不断美化<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86%E5%86%8D%E6%95%99%E8%82%B2%E8%90%A5.md">新疆再教育营</a>，迪里夏提表示，“再教育”集中营里都是中共的武装人员和半武装人员，本身通过折磨和对意识形态的打击，迫使人们失去自己的意识，来接纳中共所灌输的一切。</p>
+<p>针对中共不断美化<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E7%96%86%E5%86%8D%E6%95%99%E8%82%B2%E8%90%A5.md#1">新疆再教育营</a>，迪里夏提表示，“再教育”集中营里都是中共的武装人员和半武装人员，本身通过折磨和对意识形态的打击，迫使人们失去自己的意识，来接纳中共所灌输的一切。</p>
 <p>他说：“被关进去的人不可能会有正常教学的环境、接受正常的教育。实质上，中共把过去的劳改营转化为现在的再教育集中营，把人们关进去，进行肉体和灵魂的折磨，迫使（人们）接受中共的意识形态。”</p>
 <p>迪里夏提认为，国际媒体的曝光和谴责并没有触及到中共，让它感受到压力。如果要缓解当地的局势，不只是需要国际舆论的支持，更需要的是各个国家能采取统一的强硬的制裁措施，包括外交、经济、文化等各个领域，全方位地进行制裁。在这种强硬的制裁措施下，才有可能迫使中共当局关闭再教育集中营。#</p>
 <p>责任编辑：刘毅</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/18/11/28/n10879799.htm">新疆向内地高薪招万名教师及警察 引关注</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/3/6/n11092642.htm">仅两成国际生考上大学 英语为主因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/27/n11077059.htm">非欧盟学生留学法国 本科和硕士注册费大涨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/23/n11065493.htm">留美新生人数下滑 中国学生依然最多</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/28/n11007024.htm">留学生英语水平引忧 维州州长干预</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/16/n10979334.htm">为延长在澳逗留时间 近20万留学生转换签证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/9/n10962420.htm">研究：6成留学生通过中介在加拿大上学</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/30/n10941031.htm">忧千人计划？麻省理工传拒收中国高中生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/11/26/n10875639.htm">多伦多麦克肯立高中 - 通往主流社会精英之路</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万?罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/11/28/n10878426.md#1">外媒视频曝光新疆“再教育营” 与监狱无异</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/11/27/n10877423.md#1">中国良心摄影师卢广 在新疆“被失踪”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/31/n10821601.md#1">崔士方：新疆“再教育营”有两大“鼻祖”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/31/n10820681.md#1">中共清洗新疆 中国难民在澳上诉申请增一倍</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/26/n10809739.md#1">外媒：新疆职业培训中心购买数千警棍手铐</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/25/n10807608.md#1">三澳人曾被关押 澳洲关注新疆“再教育营”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/24/n10806098.md#1">英媒新疆调查?揭秘人类最大集中营（下）</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/18/11/28/n10879799.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/25/n10808671.md#1">【新闻看点】新疆职教营为何买数千警棍手铐</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943833.md#1">疫情肆虐 美国民众集体诉讼中共当局六被告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11805341.md#1">【思想领袖】史帕丁：中共寄生式经济 川普反制</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945316.md#1">疫情冲击 水果卖不出 批发市场用铲车倒掉</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/28/n10879799.htm">新疆向内地高薪招万名教师及警察 引关注</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/11/28/n10879799.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
